test/types/scalar/kbrady/uint_int.good
0
255
65535
4294967295
9223372036854775807
uint_int.chpl:7: error: halt reached - casting uint(64) > max(int(64)) to int(64)
