test/types/scalar/kbrady/uint_int.chpl
writeln(min(uint(64)).safeCast(int));

writeln(max(uint(8)).safeCast(int));
writeln(max(uint(16)).safeCast(int));
writeln(max(uint(32)).safeCast(int));
writeln((max(int):uint).safeCast(int));
writeln(max(uint(64)).safeCast(int));
